crates/app/src/snapshots/ghtui__snapshot_tests__wiki_light.snap
---
source: crates/app/src/snapshot_tests.rs
assertion_line: 917
expression: "render(&with_wiki(Mode::Light))"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 100, height: 30 },
    content: [
        "  ◆ ghtui   gold-silver-copper / ghtui                 ⌕ Type / to search                 @octocat  ",
        "   <> Code   ◉ Issues  7    ⇄ Pull requests  3    ▶ Actions                                         ",
        "──━━━━━━━━━─────────────────────────────────────────────────────────────────────────────────────────",
        "                                                                                                    ",
        "  Home                                                                                              ",
        "  ───────────────────────────────────────────────────────────────────────────────────────────────   ",
        "  Welcome to the wiki.                                                                              ",
        "                                                                                                    ",
        "  See Getting started and FAQ.                                                                      ",
        "                                                                                                    ",
        "  ╭─ Pages  3 ──────────────────────────────────────────────────────────────────────────────────╮   ",
        "  │▌FAQ                                                                                         │   ",
        "  ├─────────────────────────────────────────────────────────────────────────────────────────────┤   ",
        "  │ Getting started                                                                             │   ",
        "  ├─────────────────────────────────────────────────────────────────────────────────────────────┤   ",
        "  │ Home                                                                                        │   ",
        "  ╰─────────────────────────────────────────────────────────────────────────────────────────────╯   ",
        "                                                                                                    ",
        "  Home · FAQ                                                                                        ",
        "                                                                                                    ",
        "                                                                                                    ",
        "                                                                                                    ",
        "                                                                                                    ",
        "                                                                                                    ",
        "                                                                                                    ",
        "                                                                                                    ",
        "                                                                                                    ",
        "                                                                                                    ",
        "                                                                                                    ",
        "  space menu   ↵ open   / search   f go to file   ←→ tabs   o browser                API 4987/5000  ",
    ],
    styles: [
        x: 0, y: 0, fg: Rgb(25, 28, 32), bg: Rgb(237, 237, 244), underline: Reset, modifier: NONE,
        x: 2, y: 0, fg: Rgb(50, 83, 131), bg: Rgb(237, 237, 244), underline: Reset, modifier: BOLD,
        x: 9, y: 0, fg: Rgb(25, 28, 32), bg: Rgb(237, 237, 244), underline: Reset, modifier: NONE,
        x: 30, y: 0, fg: Rgb(67, 71, 78), bg: Rgb(237, 237, 244), underline: Reset, modifier: NONE,
        x: 33, y: 0, fg: Rgb(25, 28, 32), bg: Rgb(237, 237, 244), underline: Reset, modifier: BOLD,
        x: 38, y: 0, fg: Rgb(25, 28, 32), bg: Rgb(237, 237, 244), underline: Reset, modifier: NONE,
        x: 54, y: 0, fg: Rgb(25, 28, 32), bg: Rgb(226, 226, 233), underline: Reset, modifier: NONE,
        x: 55, y: 0, fg: Rgb(67, 71, 78), bg: Rgb(226, 226, 233), underline: Reset, modifier: NONE,
        x: 73, y: 0, fg: Rgb(25, 28, 32), bg: Rgb(226, 226, 233), underline: Reset, modifier: NONE,
        x: 87, y: 0, fg: Rgb(25, 28, 32), bg: Rgb(237, 237, 244), underline: Reset, modifier: NONE,
        x: 90, y: 0, fg: Rgb(67, 71, 78), bg: Rgb(237, 237, 244), underline: Reset, modifier: NONE,
        x: 98, y: 0, fg: Rgb(25, 28, 32), bg: Rgb(237, 237, 244), underline: Reset, modifier: NONE,
        x: 2, y: 1, fg: Rgb(67, 71, 78), bg: Rgb(237, 237, 244), underline: Reset, modifier: NONE,
        x: 6, y: 1, fg: Rgb(25, 28, 32), bg: Rgb(237, 237, 244), underline: Reset, modifier: BOLD,
        x: 10, y: 1, fg: Rgb(25, 28, 32), bg: Rgb(237, 237, 244), underline: Reset, modifier: NONE,
        x: 12, y: 1, fg: Rgb(67, 71, 78), bg: Rgb(237, 237, 244), underline: Reset, modifier: NONE,
        x: 15, y: 1, fg: Rgb(25, 28, 32), bg: Rgb(237, 237, 244), underline: Reset, modifier: NONE,
        x: 22, y: 1, fg: Rgb(25, 28, 32), bg: Rgb(226, 226, 233), underline: Reset, modifier: NONE,
        x: 25, y: 1, fg: Rgb(25, 28, 32), bg: Rgb(237, 237, 244), underline: Reset, modifier: NONE,
        x: 27, y: 1, fg: Rgb(67, 71, 78), bg: Rgb(237, 237, 244), underline: Reset, modifier: NONE,
        x: 30, y: 1, fg: Rgb(25, 28, 32), bg: Rgb(237, 237, 244), underline: Reset, modifier: NONE,
        x: 44, y: 1, fg: Rgb(25, 28, 32), bg: Rgb(226, 226, 233), underline: Reset, modifier: NONE,
        x: 47, y: 1, fg: Rgb(25, 28, 32), bg: Rgb(237, 237, 244), underline: Reset, modifier: NONE,
        x: 49, y: 1, fg: Rgb(67, 71, 78), bg: Rgb(237, 237, 244), underline: Reset, modifier: NONE,
        x: 52, y: 1, fg: Rgb(25, 28, 32), bg: Rgb(237, 237, 244), underline: Reset, modifier: NONE,
        x: 0, y: 2, fg: Rgb(190, 193, 201), bg: Rgb(237, 237, 244), underline: Reset, modifier: NONE,
        x: 2, y: 2, fg: Rgb(50, 83, 131), bg: Rgb(237, 237, 244), underline: Reset, modifier: NONE,
        x: 11, y: 2, fg: Rgb(190, 193, 201), bg: Rgb(237, 237, 244), underline: Reset, modifier: NONE,
        x: 0, y: 3, fg: Rgb(25, 28, 32), bg: Rgb(243, 243, 250), underline: Reset, modifier: NONE,
        x: 2, y: 4, fg: Rgb(25, 28, 32), bg: Rgb(243, 243, 250), underline: Reset, modifier: BOLD,
        x: 6, y: 4, fg: Rgb(25, 28, 32), bg: Rgb(243, 243, 250), underline: Reset, modifier: NONE,
        x: 2, y: 5, fg: Rgb(67, 71, 78), bg: Rgb(243, 243, 250), underline: Reset, modifier: NONE,
        x: 97, y: 5, fg: Rgb(25, 28, 32), bg: Rgb(243, 243, 250), underline: Reset, modifier: NONE,
        x: 6, y: 8, fg: Rgb(50, 83, 131), bg: Rgb(243, 243, 250), underline: Reset, modifier: NONE,
        x: 21, y: 8, fg: Rgb(25, 28, 32), bg: Rgb(243, 243, 250), underline: Reset, modifier: NONE,
        x: 26, y: 8, fg: Rgb(50, 83, 131), bg: Rgb(243, 243, 250), underline: Reset, modifier: NONE,
        x: 29, y: 8, fg: Rgb(25, 28, 32), bg: Rgb(243, 243, 250), underline: Reset, modifier: NONE,
        x: 2, y: 10, fg: Rgb(190, 193, 201), bg: Rgb(243, 243, 250), underline: Reset, modifier: NONE,
        x: 4, y: 10, fg: Rgb(25, 28, 32), bg: Rgb(243, 243, 250), underline: Reset, modifier: NONE,
        x: 5, y: 10, fg: Rgb(25, 28, 32), bg: Rgb(243, 243, 250), underline: Reset, modifier: BOLD,
        x: 13, y: 10, fg: Rgb(25, 28, 32), bg: Rgb(243, 243, 250), underline: Reset, modifier: NONE,
        x: 14, y: 10, fg: Rgb(190, 193, 201), bg: Rgb(243, 243, 250), underline: Reset, modifier: NONE,
        x: 97, y: 10, fg: Rgb(25, 28, 32), bg: Rgb(243, 243, 250), underline: Reset, modifier: NONE,
        x: 2, y: 11, fg: Rgb(190, 193, 201), bg: Rgb(243, 243, 250), underline: Reset, modifier: NONE,
        x: 3, y: 11, fg: Rgb(50, 83, 131), bg: Rgb(221, 225, 237), underline: Reset, modifier: NONE,
        x: 7, y: 11, fg: Rgb(25, 28, 32), bg: Rgb(221, 225, 237), underline: Reset, modifier: NONE,
        x: 96, y: 11, fg: Rgb(190, 193, 201), bg: Rgb(243, 243, 250), underline: Reset, modifier: NONE,
        x: 97, y: 11, fg: Rgb(25, 28, 32), bg: Rgb(243, 243, 250), underline: Reset, modifier: NONE,
        x: 2, y: 12, fg: Rgb(190, 193, 201), bg: Rgb(243, 243, 250), underline: Reset, modifier: NONE,
        x: 97, y: 12, fg: Rgb(25, 28, 32), bg: Rgb(243, 243, 250), underline: Reset, modifier: NONE,
        x: 2, y: 13, fg: Rgb(190, 193, 201), bg: Rgb(243, 243, 250), underline: Reset, modifier: NONE,
        x: 3, y: 13, fg: Rgb(25, 28, 32), bg: Rgb(243, 243, 250), underline: Reset, modifier: NONE,
        x: 4, y: 13, fg: Rgb(50, 83, 131), bg: Rgb(243, 243, 250), underline: Reset, modifier: NONE,
        x: 19, y: 13, fg: Rgb(25, 28, 32), bg: Rgb(243, 243, 250), underline: Reset, modifier: NONE,
        x: 96, y: 13, fg: Rgb(190, 193, 201), bg: Rgb(243, 243, 250), underline: Reset, modifier: NONE,
        x: 97, y: 13, fg: Rgb(25, 28, 32), bg: Rgb(243, 243, 250), underline: Reset, modifier: NONE,
        x: 2, y: 14, fg: Rgb(190, 193, 201), bg: Rgb(243, 243, 250), underline: Reset, modifier: NONE,
        x: 97, y: 14, fg: Rgb(25, 28, 32), bg: Rgb(243, 243, 250), underline: Reset, modifier: NONE,
        x: 2, y: 15, fg: Rgb(190, 193, 201), bg: Rgb(243, 243, 250), underline: Reset, modifier: NONE,
        x: 3, y: 15, fg: Rgb(25, 28, 32), bg: Rgb(243, 243, 250), underline: Reset, modifier: NONE,
        x: 4, y: 15, fg: Rgb(50, 83, 131), bg: Rgb(243, 243, 250), underline: Reset, modifier: NONE,
        x: 8, y: 15, fg: Rgb(25, 28, 32), bg: Rgb(243, 243, 250), underline: Reset, modifier: NONE,
        x: 96, y: 15, fg: Rgb(190, 193, 201), bg: Rgb(243, 243, 250), underline: Reset, modifier: NONE,
        x: 97, y: 15, fg: Rgb(25, 28, 32), bg: Rgb(243, 243, 250), underline: Reset, modifier: NONE,
        x: 2, y: 16, fg: Rgb(190, 193, 201), bg: Rgb(243, 243, 250), underline: Reset, modifier: NONE,
        x: 97, y: 16, fg: Rgb(25, 28, 32), bg: Rgb(243, 243, 250), underline: Reset, modifier: NONE,
        x: 2, y: 18, fg: Rgb(50, 83, 131), bg: Rgb(243, 243, 250), underline: Reset, modifier: NONE,
        x: 6, y: 18, fg: Rgb(25, 28, 32), bg: Rgb(243, 243, 250), underline: Reset, modifier: NONE,
        x: 9, y: 18, fg: Rgb(50, 83, 131), bg: Rgb(243, 243, 250), underline: Reset, modifier: NONE,
        x: 12, y: 18, fg: Rgb(25, 28, 32), bg: Rgb(243, 243, 250), underline: Reset, modifier: NONE,
        x: 0, y: 29, fg: Rgb(25, 28, 32), bg: Rgb(237, 237, 244), underline: Reset, modifier: NONE,
        x: 2, y: 29, fg: Rgb(50, 83, 131), bg: Rgb(237, 237, 244), underline: Reset, modifier: BOLD,
        x: 7, y: 29, fg: Rgb(67, 71, 78), bg: Rgb(237, 237, 244), underline: Reset, modifier: NONE,
        x: 12, y: 29, fg: Rgb(25, 28, 32), bg: Rgb(237, 237, 244), underline: Reset, modifier: NONE,
        x: 15, y: 29, fg: Rgb(50, 83, 131), bg: Rgb(237, 237, 244), underline: Reset, modifier: BOLD,
        x: 16, y: 29, fg: Rgb(67, 71, 78), bg: Rgb(237, 237, 244), underline: Reset, modifier: NONE,
        x: 21, y: 29, fg: Rgb(25, 28, 32), bg: Rgb(237, 237, 244), underline: Reset, modifier: NONE,
        x: 24, y: 29, fg: Rgb(50, 83, 131), bg: Rgb(237, 237, 244), underline: Reset, modifier: BOLD,
        x: 25, y: 29, fg: Rgb(67, 71, 78), bg: Rgb(237, 237, 244), underline: Reset, modifier: NONE,
        x: 32, y: 29, fg: Rgb(25, 28, 32), bg: Rgb(237, 237, 244), underline: Reset, modifier: NONE,
        x: 35, y: 29, fg: Rgb(50, 83, 131), bg: Rgb(237, 237, 244), underline: Reset, modifier: BOLD,
        x: 36, y: 29, fg: Rgb(67, 71, 78), bg: Rgb(237, 237, 244), underline: Reset, modifier: NONE,
        x: 47, y: 29, fg: Rgb(25, 28, 32), bg: Rgb(237, 237, 244), underline: Reset, modifier: NONE,
        x: 50, y: 29, fg: Rgb(50, 83, 131), bg: Rgb(237, 237, 244), underline: Reset, modifier: BOLD,
        x: 52, y: 29, fg: Rgb(67, 71, 78), bg: Rgb(237, 237, 244), underline: Reset, modifier: NONE,
        x: 57, y: 29, fg: Rgb(25, 28, 32), bg: Rgb(237, 237, 244), underline: Reset, modifier: NONE,
        x: 60, y: 29, fg: Rgb(50, 83, 131), bg: Rgb(237, 237, 244), underline: Reset, modifier: BOLD,
        x: 61, y: 29, fg: Rgb(67, 71, 78), bg: Rgb(237, 237, 244), underline: Reset, modifier: NONE,
        x: 69, y: 29, fg: Rgb(25, 28, 32), bg: Rgb(237, 237, 244), underline: Reset, modifier: NONE,
        x: 85, y: 29, fg: Rgb(67, 71, 78), bg: Rgb(237, 237, 244), underline: Reset, modifier: NONE,
        x: 98, y: 29, fg: Rgb(25, 28, 32), bg: Rgb(237, 237, 244), underline: Reset, modifier: NONE,
    ]
}
